--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -10,6 +10,6 @@
   "arrowParens": "avoid",
   "endOfLine": "lf",
   "quoteProps": "as-needed",
-  "jsxSingleQuote": false,
+  "jsxSingleQuote": true,
   "embeddedLanguageFormatting": "auto"
 }
