--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
+    "marked": "^16.0.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -55,6 +57,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query-devtools": "^5.80.5",
     "@types/cookie": "^1.0.0",
+    "@types/marked": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
